# data-engineering-roadmap

./: README.md
01_etl_1bilhao_linhas/: pyproject.toml
02.projetos/02.pipeline-etl-python/: pyproject.toml
02.projetos/02.pipeline-etl-python/agents/: main.py
02.projetos/02.pipeline-etl-python/pipeline/: exemplo_08.py
02.projetos/03.etl-arquitetura-medalhao/: README.md  bronze_extract_data.py  bronze_ingest_data.py  get-data.py  requirements.txt  silver_load_data.py  silver_load_db.py  silver_transform_data.py
02.projetos/04.data-netflix/: requirements.txt
02.projetos/05.commodities-elt-python-dbt/: .exemple-env
02.projetos/05.scraping-python-etl/: .pylintrc  (+1 more)
02_pipeline_etl_python/: .env-example  db.json  pyproject.toml
engenharia-dados-com-python-e-banco-de-dados/: requirement.txt
python-etl/: 1.importando_arquivos_excel.ipynb  10.renomeando_colunas.ipynb  11.importando_df_para_sql_server.ipynb  12.importando_carga_categoria.ipynb  13.importando_carga_items.ipynb  14.importando_carga_ordens.ipynb  15.importando_carga_clientes.ipynb  16.carga_varias_tabelas.ipynb  17.executar_queries_sql.ipynb  18.executando_queries_avancadas.ipynb  19.mesclando_varias_tabelas.ipynb  2.importando_arquivos_csv.ipynb  20.concat_consolidando_arquivos.ipynb  21.concat_coluna_nova.ipynb  22.extraindo_infor_bd_diferentes.ipynb  3.consolidando_arquivos.ipynb  4.conversao_dados.ipynb  5.inserindo_novas_colunas.ipynb  6.excel_varias_guias.ipynb  7.selecionando_algumas_colunas.ipynb  8.removendo_duplicatas.ipynb  9.classificando_crescente_decrecente.ipynb  requirement.txt
(+172 files in other folders)
