[tool.poetry]
name = "01-etl-1bilhao-linhas"
version = "0.1.0"
description = ""
authors = ["juniorsilvacc <juniorsilvacc@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
tqdm = "^4.67.1"
streamlit = "^1.45.1"
duckdb = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
