[tool.poetry]
name = "02-pipeline-etl-python"
version = "0.1.0"
description = ""
authors = ["juniorsilvacc <juniorsilvacc@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
tinydb = "^4.8.2"
sqlalchemy = "^2.0.41"
psycopg2 = "^2.9.10"
python-dotenv = "^1.1.0"
streamlit = "^1.45.1"
pandas = "^2.2.3"
agno = "^1.5.1"
openai = "^1.79.0"
groq = "^0.25.0"
duckduckgo-search = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
